# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  cli.py  diff_tree.py  file.py  file_loader.py  gendiff.py  gendiff_lib.py  generate_diff.py  json_stringifier.py  load_file.py  nested_stringifier.py  plain_stringifier.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_compelx_json.py  test_compelx_yaml.py  test_complex_json_nested_format.py  test_complex_json_plain_format.py  test_complex_yaml_plain_format.py  test_gendiff_output.py  test_load_file.py  test_plain_json.py  test_plain_yaml.py  test_simple_json_nested_format.py  test_simple_json_plain_format.py  test_simple_yaml_plain_format.py
tests/bkp/: test_complex_yaml_nested_format.py  test_simple_yaml_nested_format.py
tests/fixtures/: complex1.json  complex1.yaml  complex1_complex1_result_default_format.txt  complex1_complex1_result_json_format.txt  complex1_complex1_result_nested_format.txt  complex1_complex2_result_default_format.txt  complex1_complex2_result_json_format.txt  complex1_complex2_result_nested_format.txt  complex1_complex2_result_plain_format.txt  complex1_complex2_results.txt  complex1_complex3_result_default_format.txt  complex1_complex3_result_json_format.txt  complex1_complex3_result_nested_format.txt  complex1_complex3_result_plain_format.txt  complex2.json  complex2.yaml  complex3.json  complex3.yaml  plain1.yaml  plain1_plain1_json_results.txt  plain1_plain3_json_results.txt  (+20 more)
